View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027783 | Open CASCADE | OCCT:Visualization | public | 2016-08-16 22:10 | 2016-12-09 16:38 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027783: Visualization, XCAFPrs_AISObject - override method SetMaterial() | ||||
Description | XCAFPrs_AISObject::SetMaterial() should be overridden to properly handle material updates taking into account XDE styles. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR27783 has been created by kgv. SHA-1: 044bc5fc2647b1322367fff9a8b6a7c6fa7bdf99 Detailed log of new commits: Author: kgv Date: Tue Aug 16 22:15:29 2016 +0300 0027783: Visualization, XCAFPrs_AISObject - override method SetMaterial() XCAFPrs_AISObject::SetMaterial() now changes the default material of the object but preserves custom XDE styles. XCAFPrs_AISObject::Compute() now does not reset map of custom aspects each call, so that to keep in sync aspects across multiple presentations. AIS_InteractiveContext - private methods and class fields are now protected to allow inheritance. |
|
Patch is ready for review. |
|
Branch CR27783 has been updated forcibly by kgv. SHA-1: f64f73b90d1a692458b81cec7db47df08f5688f1 |
|
Branch CR27783 reviewed without remarks, ready for testing. |
|
Dear BugMaster, Branch CR27783 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: f64f73b90d1a692458b81cec7db47df08f5688f1 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1139 Regressions/Differences: http://occt-tests/CR27783-master-OCCT/Debian70-64/summary.html http://occt-tests/CR27783-master-OCCT/Windows-64-VC10/summary.html bugs iges bug25747 bugs vis bug23123 bugs xde bug22982 v3d glsl distinguish_off http://occt-tests/CR27783-master-Products/Debian70-64/summary.html http://occt-tests/CR27783-master-Products/Windows-64-VC10/summary.html dxf read bug22396, bug25375, F2 Testing cases: Not needed CPU-problematic test case has been detected: bugs xde bug22982: 1.0296066 / 0.2028013 [+407.69%] Testing on Linux: Total MEMORY difference: 89949895 / 89484325 [+0.52%] Total CPU difference: 19464.60000000005 / 19494.34000000011 [-0.15%] Testing on Windows: Total MEMORY difference: 57133029 / 57161393 [-0.05%] Total CPU difference: 18029.893575498885 / 18084.68112669885 [-0.30%] There are differences in images found by testdiff: http://occt-tests/CR27783-master-OCCT/Debian70-64/diff-Debian70-64.html http://occt-tests/CR27783-master-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html v3d glsl distinguish_off demo samples xde demo samples cpu demo samples pencil bugs xde bug22982 bugs xde bug6307 bugs xde bug25381 bugs xde bug24430 bugs iges bug25518 bugs iges bug25747 bugs step bug26657 bugs vis bug23123 http://occt-tests/CR27783-master-Products/Debian70-64/diff-Debian70-64.html http://occt-tests/CR27783-master-Products/Windows-64-VC10/diff-Windows-64-VC10-image.html dxf read bug23611 dxf read bug27204_1 dxf read bug22396 dxf read bug27204_3 dxf read bug27204_2 dxf read bug25196 dxf read G2 dxf read bug25375 dxf read bug26769 dxf read bug24523 dxf read bug27204_5 dxf read bug27204_4 dxf read F2 sat read E6 |
|
Dear Kirill, Branch CR27783 has been rejected due to: - regressions/differences/improvements - CPU problem - differences in images |
|
Branch CR27783 has been updated by kgv. SHA-1: 18cffb296239e08be3fe8d071366071ef9f4b240 Detailed log of new commits: Author: kgv Date: Tue Aug 23 15:18:00 2016 +0300 fix first display |
|
Branch CR27783_1 has been created by kgv. SHA-1: 723bb8ae1f9e6254403dea08e562d6aed8750743 Detailed log of new commits: Author: kgv Date: Tue Aug 23 15:18:48 2016 +0300 0027783: Visualization, XCAFPrs_AISObject - override method SetMaterial() XCAFPrs_AISObject::SetMaterial() now changes the default material of the object but preserves custom XDE styles. XCAFPrs_AISObject::Compute() now does not reset map of custom aspects each call, so that to keep in sync aspects across multiple presentations. AIS_InteractiveContext - private methods and class fields are now protected to allow inheritance. |
|
Please check updated patch in branch CR27783_1. |
|
Dear BugMaster, Branch CR27783_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 723bb8ae1f9e6254403dea08e562d6aed8750743 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1136 Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 89887517 / 89538508 [+0.39%] Total CPU difference: 19594.310000000114 / 19495.580000000107 [+0.51%] Testing on Windows: Total MEMORY difference: 57146399 / 57161393 [-0.03%] Total CPU difference: 17991.174127298877 / 18084.68112669885 [-0.52%] |
|
Branch CR27783_1 has been deleted by inv. SHA-1: 723bb8ae1f9e6254403dea08e562d6aed8750743 |
|
Branch CR27783 has been deleted by inv. SHA-1: 18cffb296239e08be3fe8d071366071ef9f4b240 |
occt: master e5b8456d 2016-08-23 12:18:48 Committer: bugmaster Details Diff |
0027783: Visualization, XCAFPrs_AISObject - override method SetMaterial() XCAFPrs_AISObject::SetMaterial() now changes the default material of the object but preserves custom XDE styles. XCAFPrs_AISObject::Compute() now does not reset map of custom aspects each call, so that to keep in sync aspects across multiple presentations. AIS_InteractiveContext - private methods and class fields are now protected to allow inheritance. |
Affected Issues 0027783 |
|
mod - src/AIS/AIS_ColoredShape.hxx | Diff File | ||
mod - src/AIS/AIS_InteractiveContext.hxx | Diff File | ||
mod - src/XCAFPrs/XCAFPrs_AISObject.cxx | Diff File | ||
mod - src/XCAFPrs/XCAFPrs_AISObject.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-08-16 22:10 | kgv | New Issue | |
2016-08-16 22:10 | kgv | Assigned To | => kgv |
2016-08-16 22:15 | git | Note Added: 0056773 | |
2016-08-16 22:16 | kgv | Note Added: 0056774 | |
2016-08-16 22:16 | kgv | Assigned To | kgv => san |
2016-08-16 22:16 | kgv | Status | new => resolved |
2016-08-22 16:40 | git | Note Added: 0056929 | |
2016-08-22 18:08 | san | Note Added: 0056936 | |
2016-08-22 18:08 | san | Assigned To | san => bugmaster |
2016-08-22 18:08 | san | Status | resolved => reviewed |
2016-08-22 18:13 |
|
Assigned To | bugmaster => apv |
2016-08-23 13:39 |
|
Test case number | => Not needed |
2016-08-23 13:50 |
|
Note Added: 0056961 | |
2016-08-23 13:50 |
|
Assigned To | apv => kgv |
2016-08-23 13:50 |
|
Status | reviewed => assigned |
2016-08-23 13:51 |
|
Note Added: 0056962 | |
2016-08-23 15:18 | git | Note Added: 0056970 | |
2016-08-23 15:19 | git | Note Added: 0056971 | |
2016-08-23 15:21 | kgv | Note Added: 0056972 | |
2016-08-23 15:21 | kgv | Assigned To | kgv => bugmaster |
2016-08-23 15:21 | kgv | Status | assigned => resolved |
2016-08-23 15:21 | kgv | Status | resolved => reviewed |
2016-08-23 15:41 |
|
Assigned To | bugmaster => apv |
2016-08-24 13:16 |
|
Note Added: 0057020 | |
2016-08-24 13:16 |
|
Assigned To | apv => bugmaster |
2016-08-24 13:16 |
|
Status | reviewed => tested |
2016-08-26 11:53 | bugmaster | Changeset attached | => occt master e5b8456d |
2016-08-26 11:53 | bugmaster | Status | tested => verified |
2016-08-26 11:53 | bugmaster | Resolution | open => fixed |
2016-08-26 16:21 | git | Note Added: 0057119 | |
2016-08-26 16:21 | git | Note Added: 0057120 | |
2016-12-09 16:31 |
|
Status | verified => closed |
2016-12-09 16:38 |
|
Fixed in Version | => 7.1.0 |