src/XCAFPrs/XCAFPrs_AISObject.hxx
@@ -38,6 +38,18 @@ public:
     myLabel = theLabel;
   }
 
+  //! Fetch the Shape from associated Label and fill the map of sub-shapes styles.
+  //! By default, this method is called implicitly within first ::Compute().
+  //! Application might call this method explicitly to manipulate styles afterwards.
+  //! @param theToSyncStyles flag indicating if method ::Compute() should call this method again
+  //!                        on first compute or re-compute
+  Standard_EXPORT virtual void DispatchStyles (const Standard_Boolean theToSyncStyles = Standard_False);
+
+  //! Sets the material aspect.
+  //! This method assigns the new default material without overriding XDE styles.
+  //! Re-computation of existing presentation is not required after calling this method.
+  Standard_EXPORT virtual void SetMaterial (const Graphic3d_MaterialAspect& theMaterial) Standard_OVERRIDE;
+
 protected:
 
   //! Redefined method to compute presentation.
@@ -57,7 +69,8 @@ protected:
 
 protected:
 
-  TDF_Label myLabel;
+  TDF_Label        myLabel;        //!< label pointing onto the shape
+  Standard_Boolean myToSyncStyles; //!< flag indicating that shape and sub-shapes should be updates within Compute()
 
 public:
 
